--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
 *,
 *::before,
 *::after {
@@ -10,12 +12,13 @@
     font: inherit;
 }
 
-html {
+/* html {
     color-scheme: dark light;
-}
+} */
 
 body {
     min-height: 100vh;
+    font-family: 'Roboto', sans-serif;
 }
 
 img,
@@ -24,4 +27,38 @@ video,
 svg {
     display: block;
     max-width: 100%;
+}
+
+.navbarItem a{
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+    font-size: 1.2rem;
+    padding: 0.5rem 1rem;
+}
+
+.navbarName h1{
+    font-size: 2rem;
+    font-weight: bold;
+    background-color: #000;
+    color: #fff;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background-color: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+footer{
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+    font-weight: bold;
 }
